InternexDev_Sandbox/src/objects/WF_GAD__c.object
<CustomObject>
    <fields>
        <fullName>Adjustment_amount__c</fullName>
        <label>Adjustment amount(GAD02)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_reason_code__c</fullName>
        <label>Adjustment reason code(GAD01)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <defaultValue>&quot;GAD&quot;</defaultValue>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>WF_GAD</relationshipLabel>
        <relationshipName>WF_GAD</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WF_GAD</label>
    <nameField>
        <displayFormat>GAD-{00000}</displayFormat>
        <label>WF_GAD Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF_GAD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>